--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = upesy_wroom
 framework = arduino
 lib_deps = 
 	arduino-libraries/ArduinoHttpClient@^0.6.0
-	arduino-libraries/Arduino_JSON@^0.2.0
+	bblanchon/ArduinoJson@^7.1.0
 
 [env:ESP8266]
 platform = espressif8266
@@ -22,4 +22,4 @@ board = d1_mini
 framework = arduino
 lib_deps = 
 	arduino-libraries/ArduinoHttpClient@^0.6.0
-	arduino-libraries/Arduino_JSON@^0.2.0
+	bblanchon/ArduinoJson@^7.1.0
